@@ -19,6 +19,8 @@ Parameters:
 
 * `open` - Whether voting is still open. Set to "no" to close the poll to
   voting.
+* `expandable` - Set to "yes" to make this poll have an interface to add
+  another choice to the poll.
 * `total` - Show total number of votes at bottom of poll. Default is "yes".
 * `percent` - Whether to display percents. Default is "yes".
 
