@@ -8,6 +8,8 @@ ikiwiki (3.20121213) UNRELEASED; urgency=low
     and the page defining the trail. Thanks, smcv.
   * opendiscussion: Don't allow editing discussion pages if discussion pages
     are disabled. (smcv)
+  * poll: Add expandable option to allow users to easily add new choices to
+    a poll.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2012 16:15:24 -0400
 
